docs/apache-airflow-providers-apache-hdfs/4.7.0/_sources/_api/airflow/providers/apache/hdfs/log/hdfs_task_handler/index.rst.txt
airflow.providers.apache.hdfs.log.hdfs_task_handler
===================================================

.. py:module:: airflow.providers.apache.hdfs.log.hdfs_task_handler


Classes
-------

.. autoapisummary::

   airflow.providers.apache.hdfs.log.hdfs_task_handler.HdfsTaskHandler


Module Contents
---------------

.. py:class:: HdfsTaskHandler(base_log_folder, hdfs_log_folder, **kwargs)

   Bases: :py:obj:`airflow.utils.log.file_task_handler.FileTaskHandler`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Logging handler to upload and read from HDFS.


   .. py:attribute:: remote_base


   .. py:attribute:: log_relative_path
      :value: ''



   .. py:attribute:: closed
      :value: False



   .. py:attribute:: upload_on_close
      :value: True



   .. py:attribute:: delete_local_copy


   .. py:property:: hook

      Returns WebHDFSHook.



   .. py:method:: set_context(ti)

      Provide task_instance context to airflow task handler.

      Generally speaking returns None.  But if attr `maintain_propagate` has
      been set to propagate, then returns sentinel MAINTAIN_PROPAGATE. This
      has the effect of overriding the default behavior to set `propagate`
      to False whenever set_context is called.  At time of writing, this
      functionality is only used in unit testing.

      :param ti: task instance object
      :param identifier: if set, adds suffix to log file. For use when relaying exceptional messages
          to task logs from a context other than task or trigger run



   .. py:method:: close()

      Close and upload local log file to HDFS.



